# betata

./: .gitignore  README.md  pyproject.toml
src/betata/: __init__.py
src/betata/fig1/: fig1.py  ppms_sc_transition.py  tem_haadf.py  xrd_partial_range.py
src/betata/qubit_measurements/: qubit.py  qubit_temperature.py  t1_t2e_distribution.py  t1_t2e_max_q6_4p69.py  t1_t2e_vs_time_q6_4p69.py  t1_vs_t2e.py  traces.py
src/betata/qubit_measurements/fit_t1_traces/: Q10_5p36_t1_traces.ipynb  Q11_5p78_t1_traces.ipynb  Q1_2p61_T1_vs_time_fig.py  Q1_2p61_t1_traces.ipynb  Q2_2p80_t1_traces.ipynb  Q3_2p88_T1_vs_time_fig.py  Q3_2p88_t1_traces.ipynb  Q4_3p02_t1_traces.ipynb  Q5_3p19_t1_traces.ipynb  Q6_4p69_t1_traces.ipynb  Q7_4p83_t1_traces.ipynb  Q8_4p93_t1_traces.ipynb  Q9_5p15_t1_traces.ipynb  best_T1_fig.py  fit_t1_traces.py
src/betata/qubit_measurements/fit_t2e_traces/: Q10_5p36_t2e_traces.ipynb  Q11_5p78_t2e_traces.ipynb  Q1_2p61_t2e_traces.ipynb  Q2_2p80_t2e_traces.ipynb  Q3_2p88_t2e_traces.ipynb  Q4_3p02_t2e_traces.ipynb  Q5_3p19_t2e_traces.ipynb  Q6_4p69_t2e_traces.ipynb  Q7_4p83_t2e_traces.ipynb  Q8_4p93_t2e_traces.ipynb  Q9_5p15_t2e_traces.ipynb  best_T2E_fig.py  fit_t2e_traces.py
src/betata/qubit_measurements/fit_t2r_traces/: Q10_5p36_t2r_traces.ipynb  Q11_5p78_t2r_traces.ipynb  Q1_2p61_t2r_traces.ipynb  Q2_2p80_t2r_traces.ipynb  (+8 more)
src/betata/resonator_studies/: alpha_vs_pitch_vs_thickness.py  kinetic_inductance_fig.py  resonator.py  tls_losses_fig.py  trace.py
src/betata/verify_phase/: phase_ver_fig.py  ppms_sc_transition.py  tem_haadf.py  xrd_partial_range.py
(+367 files in other folders)
