[project]
name = "betata"
version = "0.1.0"
description = "Scripts to analyze data collected for the beta Ta paper."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "brokenaxes>=0.6.2",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "rrfit",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "uncertainties>=3.2.3",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.sources]
rrfit = { git = "https://github.com/T1-Team/rrfit.git" }
